julias-kitten-cfn-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Deploy a simple web server with a kitten carousel'

Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-minimal-kernel-default-x86_64'

Resources:
  # 1. Security Group as Firewall
  MyCfnSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows Http vs SSH
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
  MyInstance:
  # 2. EC2 Instance as Server
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 't3.micro'
      ImageId: !Ref LatestAmiId
      KeyName: Julia-test-MyWebS # don't forget to change your key pair name 
      SecurityGroupIds: 
        - !Ref MyCfnSG 
      Tags: 
        - Key: Name
          Value: MyFirstCfnInstance
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          cd /var/www/html
          curl -L https://raw.githubusercontent.com/julia-sen2026/kitten-carousel-static-website/refs/heads/main/index.html -o index.html
          curl -L https://raw.githubusercontent.com/julia-sen2026/kitten-carousel-static-website/main/cat0.jpg -o cat0.jpg
          curl -L https://raw.githubusercontent.com/julia-sen2026/kitten-carousel-static-website/main/cat1.jpg -o cat1.jpg
          curl -L https://raw.githubusercontent.com/julia-sen2026/kitten-carousel-static-website/main/cat2.jpg -o cat2.jpg
          systemctl enable httpd
          systemctl start httpd

Outputs:
  WebsiteURL:
    Description: "URL from Julia's Kitten Carousel"
    Value: !Sub "http://${MyInstance.PublicDnsName}"
